--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Gurneet Singh
-description: Final Year Dual Degree Student
+description: Final Year Dual Degree Student, Dept of CSE IIT Madras
